<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" 
    android:background="#BF590E">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" 
        android:background="#305C8C">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/imageView1"
            android:gravity="center"
            android:text="RUN &amp; SHARE"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/run_logo" />

    </RelativeLayout>
    
    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/userNameTextView" 
        android:textColor="#ffffff"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textCursorDrawable="@null" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/passwordTextView"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="43dp"
        android:background="#305C8C"
        android:text="@string/continueButton"
        android:textColor="#ffffff" />

</RelativeLayout>